<resources>
    <string name="app_name">MovieTheatre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_password_needs_to_consist_of_at_least_8_characters">* the password needs to consist of at least 8 characters</string>
    <string name="the_password_needs_to_contain_at_least_one_letter_and_digit">* the password needs to contain at least one letter and digit</string>
    <string name="invalid_email">* invalid email</string>
    <string name="field_can_not_be_blank">* field can not be blank</string>
    <string name="password_should_be_same">* password should be same</string>
    <string name="no_internet">* No internet</string>
    <string name="unknown_error">* Unknown Error</string>
    <string name="user_not_found">* User Not found</string>
    <string name="email_already_exits">* Email already exits</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_account_sign_up">Don\'t Have Account? <u>Sign up</u> </string>
    <string name="already_have_account_sign_in">Already have account? <u>Sign in</u></string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email…</string>
    <string name="enter_password">Enter password…</string>
    <string name="repeat_the_password">Repeat the password…</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_credintials">* Invalid Credintials</string>

    <string name="home">Home</string>
    <string name="hours">Hours</string>
    <string name="search">Search</string>
    <string name="_11_00_15_00">11:00-15:00</string>
    <string name="_15_00_19_00">15:00-19:00</string>
    <string name="_19_00_00_00">19:00-00:00</string>
    <string name="minutes">Minutes</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="empty_response">Empty Response</string>
    <string name="server_error">Server Error</string>
    <string name="book_the_seat">Book The Seat</string>
    <string name="screen">Screen</string>
    <string name="ticket_price">Ticket Price:</string>
    <string name="seats">Seats:</string>
    <string name="added_on_vip_fee">Added On Vip Fee:</string>
    <string name="total_price">Total Price</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="please_select_the_seats">Please Select the seats</string>
    <string name="succesfully_booked_ticket">Succesfully Booked Ticket</string>
    <string name="you_don_t_have_enough_money">You Don\'t have enough money</string>
    <string name="custom_pay">Custom Pay</string>
    <string name="cardholder_name">CardHolder Name</string>
    <string name="name">Name</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="mm_yy">MM/YY</string>
    <string name="or_check_out_with">Or Check Out With</string>
    <string name="add_new">Add New +</string>
    <string name="card_management">Card Management</string>
    <string name="payment">Payment</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_number">Card Number</string>
    <string name="expires">Expires</string>
    <string name="cvv">CVV</string>
    <string name="mastercard">MasterCard</string>
    <string name="visa">Visa</string>
    <string name="add_card">Add Card</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="name_contains_invalid_characters">Name contains invalid characters.</string>
    <string name="card_number_cannot_be_empty">Card number cannot be empty.</string>
    <string name="card_number_must_be_16_digits">Card number must be 16 digits.</string>
    <string name="invalid_card_number">Invalid card number.</string>
    <string name="expiry_date_cannot_be_empty">Expiry date cannot be empty.</string>
    <string name="expiry_date_must_be_in_mm_yy_format">incorrect MM/YY format.</string>
    <string name="card_has_expired">Card has expired.</string>
    <string name="expiry_date_is_not_realistic">Expiry date is not realistic.</string>
    <string name="cvv_cannot_be_empty">CVV cannot be empty.</string>
    <string name="cvv_must_be_exactly_3_digits">CVV must be exactly 3 digits.</string>
    <string name="can_not_save_value_plz_try_again">Can Not Save Value Plz try again.</string>
    <string name="please_correct_the_errors_before_proceeding">Please correct the errors before proceeding.</string>
    <string name="buy_options"><![CDATA[Buy Options ->]]></string>
    <string name="expire_date_format">%1$s/</string>
    <string name="payment_cancelled">payment Cancelled</string>
    <string name="payment_failed">payment failed</string>
    <string name="error_in_payment_data_try_again">error in payment data try again</string>
    <string name="something_went_wrong_try_again">Something went wrong try Again</string>
    <string name="card_with_that_card_number_already_exits">Card with that card number already exits</string>
    <string name="successfully_deleted_card">Successfully deleted card</string>
    <string name="profile">Profile</string>
    <string name="password_reset_link_sent_to_your_email">Password reset link sent to your email</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="network_error_please_check_your_connection">Network error. Please check your connection</string>
    <string name="too_many_requests_please_try_again_later">Too many requests. Please try again later</string>
    <string name="no_account_found_with_this_email">No account found with this email</string>
    <string name="your_ticket_has_been_deleted">Your Ticket Has Been Deleted</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="shop">Shop</string>
    <string name="place_order">Place Order</string>
    <string name="order_successful">Order Successful</string>
    <string name="tracking_code">Tracking code: %1$s</string>
    <string name="ok">OK</string>
    <string name="my_orders">My Orders</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="see_your_seat_in_360">See your seat in 360</string>
    <string name="all_movies">All Movies</string>
    <string name="use_coins">Use Coins</string>
    <string name="buy_with_coin">Buy With Coin</string>
    <string name="you_don_t_have_enough_coins">You don\'t have enough Coins</string>

    <string name="question_number">Question %1$d of %2$d</string>
    <string name="quiz_results">You scored %1$d out of %2$d</string>
    <string name="next">Next</string>
    <string name="quiz_category_intro">Choose a movie category to start the quiz and earn rewards!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_passed_the_quiz">You passed the quiz!</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="you_didn_t_pass_this_quiz">You didn\'t pass this quiz</string>
    <string name="out_of">%1$s out of %2$s</string>
    <string name="question">Question %1$s/%2$s</string>
    <string name="here_s_how_you_did">Here\'s how you did</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="game">Game</string>
</resources>