<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCard"
        android:layout_width="327dp"
        android:layout_height="191dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCardNumberDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/imgCard"
        app:layout_constraintEnd_toEndOf="@id/imgCard"
        app:layout_constraintStart_toStartOf="@id/imgCard"
        app:layout_constraintTop_toTopOf="@id/imgCard"
        tools:text="****      ****      ****      ****" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCardNumberStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/cardholder_name"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@id/txtCardHolderNameDisplay"
        app:layout_constraintStart_toStartOf="@id/imgCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCardHolderNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/imgCard"
        app:layout_constraintStart_toStartOf="@id/imgCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtValidThru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/valid_thru"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@id/txtCardDateDisplay"
        app:layout_constraintEnd_toEndOf="@id/imgCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCardDateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/mm_yy"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/imgCard"
        app:layout_constraintEnd_toEndOf="@id/imgCard" />


</androidx.constraintlayout.widget.ConstraintLayout>