<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="20dp"
    tools:context=".feature_home.presentation.screen.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_morning_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_time_button"
        android:text="@string/_11_00_15_00"
        app:layout_constraintEnd_toStartOf="@+id/btn_afternoon_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_afternoon_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_time_button"
        android:text="@string/_15_00_19_00"
        app:layout_constraintEnd_toStartOf="@+id/btn_night_time"
        app:layout_constraintStart_toEndOf="@+id/btn_morning_time"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_night_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_time_button"
        android:text="@string/_19_00_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_afternoon_time"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genres_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_morning_time" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btn_search"
        android:background="@drawable/bg_search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_search"
        app:layout_constraintTop_toTopOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="@id/et_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_recycler_adapter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>